--- a/notes/main.tex
+++ b/notes/main.tex
@@ -101,8 +101,8 @@
 \input{intro}
 \newpage
 \input{notation}
-%\newpage
-%\input{ciphers}
+\newpage
+\input{ciphers}
 \newpage
 \input{ciphers-draft}
 \newpage
@@ -148,7 +148,7 @@
 \newpage
 \input{idprots_contd}
 \newpage
-%\input{zk}
+\input{zk}
 \input{zknowledge}
 \newpage
 \input{bilinear}
