--- a/notes/main.tex
+++ b/notes/main.tex
@@ -102,8 +102,8 @@
 \newpage
 \input{notation}
 \newpage
-\input{ciphers}
-\newpage
+%\input{ciphers}
+%\newpage
 \input{ciphers-draft}
 \newpage
 \input{prf}
@@ -148,7 +148,7 @@
 \newpage
 \input{idprots_contd}
 \newpage
-\input{zk}
+%\input{zk}
 \input{zknowledge}
 \newpage
 \input{bilinear}
